--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,47 @@
-/* You can add global styles to this file, and also import other style files */
+.color-task-1 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(180deg, #907CFF 0%, #715BEF 100%);
+  border-image-slice: 1;
+}
+
+.color-task-2 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(180deg, #71CCF2 0%, #3CB7DD 100%);
+  border-image-slice: 1;
+}
+
+.color-task-3 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(336.5deg, #1DC9B6 11.23%, #29D4C1 76.96%);
+  border-image-slice: 1;
+}
+
+.color-task-4 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(180deg, #4CE6A7 0%, #2BC185 100%);
+  border-image-slice: 1;
+}
+
+.color-task-5 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(336.5deg, #0375F8 11.23%, #3C96FF 76.96%);
+  border-image-slice: 1;
+}
+
+.color-task-6 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(180deg, #FFD687 0%, #F9B637 100%);
+  border-image-slice: 1;
+}
+
+.color-task-7 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(0deg, #009BB2 -8.33%, #04B9D3 100%);
+  border-image-slice: 1;
+}
+
+.color-task-8 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(180deg, #FF748D 0%, #FD748D 100%);
+  border-image-slice: 1;
+}
