--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,12 @@
 <header class="header">
-  <h1 class="header__title">
+  <h1
+    (click)="goHome()"
+    class="header__title">
     Task Management
   </h1>
-  <button class="header__button">Agregar tarea</button>
+  <button
+    (click)="addTask()"
+    class="header__button">
+    Agregar tarea
+  </button>
 </header>
