Add Drag and Drop

--- a/src/app/task-card/task-card.component.scss
+++ b/src/app/task-card/task-card.component.scss
@@ -6,6 +6,8 @@
   text-align: center;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
+  background: #fff;
+  min-height: 150px;
 
   & .content {
     padding: 1em;
