--- a/src/app/task-list/task-list.component.scss
+++ b/src/app/task-list/task-list.component.scss
@@ -1,27 +1,55 @@
-.tasks-list {
+.container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  text-align: center;
+  margin-top: 24px;
+  gap: 2em;
+}
+
+.tasks-list,
+.done-list {
   display: grid;
   grid-template-columns: 1fr;
   margin-top: 24px;
   padding: 0 24px;
   gap: 10px;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
+
 @media (min-width: 768px) {
-  .tasks-list {
+
+  .tasks-list,
+  .done-list {
     grid-template-columns: 1fr 1fr;
   }
 }
 
 @media (min-width: 1024px) {
-  .tasks-list {
+
+  .tasks-list,
+  .done-list {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
 @media screen and (min-width: 1280px) {
-  .tasks-list {
+
+  .tasks-list,
+  .done-list {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 2em;
   }
 
+}
+
+// EXTRA
+app-task-card {
+  height: fit-content !important;
+}
+
+.cdk-drag-preview {
+  scale: 1.1;
 }
