Implement Edit Task

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -5,6 +5,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 1.5em 1em;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 .header__title {
