--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,3 +45,99 @@
   border-image: linear-gradient(180deg, #FF748D 0%, #FD748D 100%);
   border-image-slice: 1;
 }
+
+.color-task-9 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(180deg, #FF5733 0%, #FF8833 100%);
+  border-image-slice: 1;
+}
+
+.color-task-10 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(90deg, #FFA533 0%, #FFCC33 100%);
+  border-image-slice: 1;
+}
+
+.color-task-11 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(0deg, #33A3FF 0%, #33D3FF 100%);
+  border-image-slice: 1;
+}
+
+.color-task-12 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(270deg, #33FFA3 0%, #33FF57 100%);
+  border-image-slice: 1;
+}
+
+.color-task-13 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(45deg, #D933FF 0%, #A333FF 100%);
+  border-image-slice: 1;
+}
+
+.color-task-14 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(135deg, #FF33A3 0%, #FF3357 100%);
+  border-image-slice: 1;
+}
+
+.color-task-15 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(60deg, #33FF57 0%, #57FF33 100%);
+  border-image-slice: 1;
+}
+
+.color-task-16 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(120deg, #A333FF 0%, #D933FF 100%);
+  border-image-slice: 1;
+}
+
+.color-task-17 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(180deg, #FF5733 0%, #FFD833 100%);
+  border-image-slice: 1;
+}
+
+.color-task-18 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(270deg, #33FFA3 0%, #33A3FF 100%);
+  border-image-slice: 1;
+}
+
+.color-task-19 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(45deg, #FF33A3 0%, #FF5733 100%);
+  border-image-slice: 1;
+}
+
+.color-task-20 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(135deg, #33A3FF 0%, #33D3FF 100%);
+  border-image-slice: 1;
+}
+
+.color-task-21 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(60deg, #D933FF 0%, #A333FF 100%);
+  border-image-slice: 1;
+}
+
+.color-task-22 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(120deg, #FF33A3 0%, #FF33D3 100%);
+  border-image-slice: 1;
+}
+
+.color-task-23 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(30deg, #A333FF 0%, #D933FF 100%);
+  border-image-slice: 1;
+}
+
+.color-task-24 {
+  border-top: 5px solid transparent;
+  border-image: linear-gradient(150deg, #33FF57 0%, #57FF33 100%);
+  border-image-slice: 1;
+}
