--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="container">
 
   <app-header />
-  <router-outlet />
+  <div class="content">
+    <router-outlet />
+  </div>
 
 </div>
