--- a/src/app/task-card/task-card.component.html
+++ b/src/app/task-card/task-card.component.html
@@ -1,5 +1,7 @@
 <article
-  [class]="'card' + ' ' + borderColorClass">
+  class="card">
+
+  <div [class]="'line-top' + ' ' + borderColorClass"></div>
 
   <section class="content">
     <div class="title">{{ task.title }}</div>
