--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,143 +1,215 @@
 .color-task-1 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(180deg, #907CFF 0%, #715BEF 100%);
-  border-image-slice: 1;
+  background: linear-gradient(180deg, #907CFF 0%, #715BEF 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-2 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(180deg, #71CCF2 0%, #3CB7DD 100%);
-  border-image-slice: 1;
+  background: linear-gradient(180deg, #71CCF2 0%, #3CB7DD 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-3 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(336.5deg, #1DC9B6 11.23%, #29D4C1 76.96%);
-  border-image-slice: 1;
+  background: linear-gradient(336.5deg, #1DC9B6 11.23%, #29D4C1 76.96%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-4 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(180deg, #4CE6A7 0%, #2BC185 100%);
-  border-image-slice: 1;
+  background: linear-gradient(180deg, #4CE6A7 0%, #2BC185 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-5 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(336.5deg, #0375F8 11.23%, #3C96FF 76.96%);
-  border-image-slice: 1;
+  background: linear-gradient(336.5deg, #0375F8 11.23%, #3C96FF 76.96%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-6 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(180deg, #FFD687 0%, #F9B637 100%);
-  border-image-slice: 1;
+  background: linear-gradient(180deg, #FFD687 0%, #F9B637 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-7 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(0deg, #009BB2 -8.33%, #04B9D3 100%);
-  border-image-slice: 1;
+  background: linear-gradient(0deg, #009BB2 -8.33%, #04B9D3 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-8 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(180deg, #FF748D 0%, #FD748D 100%);
-  border-image-slice: 1;
+  background: linear-gradient(180deg, #FF748D 0%, #FD748D 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-9 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(180deg, #FF5733 0%, #FF8833 100%);
-  border-image-slice: 1;
+  background: linear-gradient(180deg, #FF5733 0%, #FF8833 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-10 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(90deg, #FFA533 0%, #FFCC33 100%);
-  border-image-slice: 1;
+  background: linear-gradient(90deg, #FFA533 0%, #FFCC33 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-11 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(0deg, #33A3FF 0%, #33D3FF 100%);
-  border-image-slice: 1;
+  background: linear-gradient(0deg, #33A3FF 0%, #33D3FF 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-12 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(270deg, #33FFA3 0%, #33FF57 100%);
-  border-image-slice: 1;
+  background: linear-gradient(270deg, #33FFA3 0%, #33FF57 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-13 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(45deg, #D933FF 0%, #A333FF 100%);
-  border-image-slice: 1;
+  background: linear-gradient(45deg, #D933FF 0%, #A333FF 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-14 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(135deg, #FF33A3 0%, #FF3357 100%);
-  border-image-slice: 1;
+  background: linear-gradient(135deg, #FF33A3 0%, #FF3357 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-15 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(60deg, #33FF57 0%, #57FF33 100%);
-  border-image-slice: 1;
+  background: linear-gradient(60deg, #33FF57 0%, #57FF33 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-16 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(120deg, #A333FF 0%, #D933FF 100%);
-  border-image-slice: 1;
+  background: linear-gradient(120deg, #A333FF 0%, #D933FF 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-17 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(180deg, #FF5733 0%, #FFD833 100%);
-  border-image-slice: 1;
+  background: linear-gradient(180deg, #FF5733 0%, #FFD833 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-18 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(270deg, #33FFA3 0%, #33A3FF 100%);
-  border-image-slice: 1;
+  background: linear-gradient(270deg, #33FFA3 0%, #33A3FF 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-19 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(45deg, #FF33A3 0%, #FF5733 100%);
-  border-image-slice: 1;
+  background: linear-gradient(45deg, #FF33A3 0%, #FF5733 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-20 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(135deg, #33A3FF 0%, #33D3FF 100%);
-  border-image-slice: 1;
+  background: linear-gradient(135deg, #33A3FF 0%, #33D3FF 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-21 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(60deg, #D933FF 0%, #A333FF 100%);
-  border-image-slice: 1;
+  background: linear-gradient(60deg, #D933FF 0%, #A333FF 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-22 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(120deg, #FF33A3 0%, #FF33D3 100%);
-  border-image-slice: 1;
+  background: linear-gradient(120deg, #FF33A3 0%, #FF33D3 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-23 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(30deg, #A333FF 0%, #D933FF 100%);
-  border-image-slice: 1;
+  background: linear-gradient(30deg, #A333FF 0%, #D933FF 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
 
 .color-task-24 {
-  border-top: 5px solid transparent;
-  border-image: linear-gradient(150deg, #33FF57 0%, #57FF33 100%);
-  border-image-slice: 1;
+  background: linear-gradient(150deg, #33FF57 0%, #57FF33 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  border-radius: 8px 8px 0 0;
 }
