--- a/src/app/task-card/task-card.component.html
+++ b/src/app/task-card/task-card.component.html
@@ -1,7 +1,7 @@
 <article
   class="card">
 
-  <div [class]="'line-top' + ' ' + borderColorClass"></div>
+  <div [class]="'line-top' + ' ' + task.borderClass"></div>
 
   <section class="content">
     <div class="title">{{ task.title }}</div>
