--- a/src/app/task-form/task-form.component.html
+++ b/src/app/task-form/task-form.component.html
@@ -8,8 +8,10 @@
     <textarea [(ngModel)]="task.description" id="description" name="description" rows="4" required></textarea>
   </div>
   <div class="form-group text-center">
-    <button (click)="submit()">
-      {{ type === 'create' ? 'Create' : 'Update' }}
+    <button
+      (click)="submit()"
+      [disabled]="handleButtonDisabled()">
+      {{ action === 'create' ? 'Create' : 'Update' }}
     </button>
   </div>
 </div>
